# bibmark

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: architecture_en.md  architecture_zh.md
examples/: publications.bib  run.py  run_all_examples.py
examples/boyan_wang/: publication.bib  run.py
examples/boyan_wang/output/: citations.md  citations.tex
examples/output/: citations.md  citations.tex
examples/wenrui_wu/: publications.bib  run.py
examples/wenrui_wu/output/: citations.md  citations.tex
examples/zhangxin_zhao/: publications.bib  run.py
examples/zhangxin_zhao/output/: citations.md  citations.tex
src/bibmark/: __init__.py  core.py  formatter.py  parser.py  writer.py
